<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CurrentExpenses">Current Claim Expenses</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="NewExpense">Add New Expense</string>
    <string name="NewClaim">Add New Claim</string>
    <string name="CurrentClaims">Current Claims</string>
    <string name="FinishDate">MM/DD/YYYY Finish</string>
    <string name="StartDate">MM/DD/YYYY Start</string>
    <string name="Name">Name</string>
    <string name="Add">Add</string>
    <string name="Date">MM/DD/YYYY</string>
    <string name="Category">Category eg: food or cab</string>
    <string name="Cost">Cost eg: 4.20</string>
    <string name="Currency">Currency eg: CAD, USD or EURO</string>
    <string name="Description">Description</string>
    <string name="title_activity_add_claim">AddClaimActivity</string>
    <string name="title_activity_add_claims">AddClaimsActivity</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_current_claim">Current Claim</string>

</resources>
